@@ -89,6 +89,16 @@
  * makes no attempt to correct for the intrinsic jitter of the radio
  * itself, which is a known problem with the older radios.
  *
+ * PPS Signal Processing
+ *
+ * When PPS signal processing is enabled, and when the system clock has
+ * been set by this or another driver and the PPS signal offset is
+ * within 0.4 s of the system clock offset, the PPS signal replaces the
+ * timecode for as long as the PPS signal is active. If for some reason
+ * the PPS signal fails for one or more poll intervals, the driver
+ * reverts to the timecode. If the timecode fails for one or more poll
+ * intervals, the PPS signal is disconnected.
+ *
  * Fudge Factors
  *
  * This driver can retrieve a table of quality data maintained
@@ -120,6 +130,8 @@
 struct wwvbunit {
 #ifdef HAVE_PPSAPI
 	struct refclock_atom atom; /* PPSAPI structure */
+	int	tcount;		/* timecode sample counter */
+	int	pcount;		/* PPS sample counter */
 #endif /* HAVE_PPSAPI */
 	l_fp	laststamp;	/* last receive timestamp */
 	u_char	lasthour;	/* last hour (for monitor) */
@@ -386,9 +398,10 @@ wwvb_receive(
 	 * timecode timestamp, but only if the PPS is not in control.
 	 */
 #ifdef HAVE_PPSAPI
-	if (peer->flags & FLAG_PPS)
+	if (peer->flags & FLAG_PPS) {
+		up->tcount++;
 		return;
-
+	}
 #endif /* HAVE_PPSAPI */
 	if (!refclock_process(pp))
 		refclock_report(peer, CEVNT_BADTIME);
@@ -425,8 +438,11 @@ wwvb_timer(
 		refclock_report(peer, CEVNT_FAULT);
 #ifdef HAVE_PPSAPI
 	if (pp->sloppyclockflag & CLK_FLAG1) {
-		if (refclock_pps(peer, &up->atom, pp->sloppyclockflag) > 0)
+		if (refclock_pps(peer, &up->atom, pp->sloppyclockflag) >
+		    0) {
+			up->pcount++,
 			peer->flags |= FLAG_PPS;
+		}
 	}
 #endif /* HAVE_PPSAPI */
 }
@@ -465,13 +481,21 @@ wwvb_poll(
 	 * Process median filter samples. If none received, declare a
 	 * timeout and keep going.
 	 */
-	if (pp->coderecv == pp->codeproc) {
-#ifdef HAE_PPSAPI
+#ifdef HAVE_PPSAPI
+	if (up->pcount == 0)
 		peer->flags &= ~FLAG_PPS;
-#endif /* HAVE_PPSAPI */
+	if (up->tcount == 0) {
+		pp->coderecv = pp->codeproc;
 		refclock_report(peer, CEVNT_TIMEOUT);
 		return;
 	}
+	up->pcount = up->tcount = 0;
+#else /* HAVE_PPSAPI */
+	if (pp->coderecv == pp->codeproc) {
+		refclock_report(peer, CEVNT_TIMEOUT);
+		return;
+	}
+#endif /* HAVE_PPSAPI */
 	refclock_receive(peer);
 	record_clock_stats(&peer->srcadr, pp->a_lastcode);
 #ifdef DEBUG
