@@ -1,3 +1,4 @@
+* Mitigation and PPS/PPSAPI cleanup from Dave Mills.
 * Documentation updates from Dave Mills.
 * timepps-Solaris.h patches from Dave Hart.
 (4.2.5p164) 2009/04/22 Released by Harlan Stenn <stenn@ntp.org>
